feat: donut e incrementdor

--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,40 @@
-<p>grafica1 works!</p>
+<div class="row">
+<div class="card">
+  <div class="card-body">
+      <h3>Sales</h3>
+      <div style="display: block">
+        <app-donut [test]='labelInfo' [title]="'HOLA MUNDO'" [serie]="serieInfo"></app-donut>
+            
+      </div>
+    </div>
+</div>
+<div class="card">
+  <div class="card-body">
+      <h3>Sales</h3>
+      <div style="display: block">
+        <app-donut [test]="labelInfo2" [serie]="serieInfo2"></app-donut>
+        
+      </div>
+    </div>
+</div>
+</div>
+
+<div class="row">
+<div class="card">
+  <div class="card-body">
+      <h3>Sales</h3>
+      <div style="display: block">
+        <app-donut [test]="labelInfo3" [serie]="serieInfo"></app-donut>
+      </div>
+    </div>
+</div>
+<div class="card">
+  <div class="card-body">
+      <h3>Sales</h3>
+      <div style="display: block">
+        <app-donut [test]="labelInfo4" [serie]="serieInfo2"></app-donut>
+        
+      </div>
+    </div>
+</div>
+</div>
