--- a/src/app/pages/pages/pages.component.html
+++ b/src/app/pages/pages/pages.component.html
@@ -5,16 +5,16 @@
     <div class="page-wrapper">
         <div class="container-fluid">
         <app-breadcrumb></app-breadcrumb>
-
-        <div class="row">
+        <router-outlet></router-outlet>
+        <!-- <div class="row">
           <div class="col-12">
               <div class="card">
                   <div class="card-body">
-                      <router-outlet></router-outlet>
+                    
                   </div>
               </div>
           </div>
-      </div>
+      </div> -->
       <footer class="footer">
         © 20xx Admin Pro by wrappixel.com
     </footer>
