--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -6,7 +6,8 @@
         <div class="container-fluid">
         <app-breadcrumb></app-breadcrumb>
         <router-outlet></router-outlet>
-        <!-- <div class="row">
+        <!-- 
+        <div class="row">
           <div class="col-12">
               <div class="card">
                   <div class="card-body">
@@ -14,7 +15,8 @@
                   </div>
               </div>
           </div>
-      </div> -->
+      </div> 
+      -->
       <footer class="footer">
         © 20xx Admin Pro by wrappixel.com
     </footer>
