--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -27,7 +27,9 @@
                             </a>
                             <ul aria-expanded="false" class="collapse">
                                 <li *ngFor="let item2 of item.submenu">
-                                    <a routerLink="{{item2.url}}"> {{item2.tittle}}</a>
+                                    <a routerLink="{{item2.url}}"
+                                    routerLinkActive="active"
+                                    [routerLinkActiveOptions]="{exact: true}"> {{item2.tittle}}</a>
                                 </li>
                                 
                             </ul>
